fix(front): fix product feedbacks

--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1289,8 +1289,7 @@
     },
     "disclaimer": "Der Kampf gegen die Verbreitung falscher Informationen im Internet ist zu einer wichtigen Herausforderung für die Zivilgesellschaft, Medien, staatliche Institutionen und vor allem für davon betroffene Bürger:innen geworden. Der Wahrheitsgehalt der auf unserer Website bereitgestellten Informationen liegt uns daher besonders am Herzen. In dieser Charta erläutern wir, welche Maßnahmen wir in diesem Sinne ergreifen.",
     "foot_notes": {
-      "link": "https://assets-global.website-files.com/59833d390a24e50001b873d8/62d80ca82cd8871a7331f896_Gender%20Equality%20Plan%20V1_EN.docx%20-%20Google%C2%A0Docs.pdf",
-      "ethical_charter": "Diese Moderationscharta wurde in Übereinstimmung mit der Ethikcharta erarbeitet, welche die Neutralität, Unabhängigkeit und Transparenz von Make.org garantiert.",
+      "ethical_charter": "Diese Moderationscharta wurde in Übereinstimmung mit der <a href=\"https://assets.website-files.com/59833d390a24e50001b873d8/60e6ce54b0bc6c415566513b_Ethikrat%20von%20Make.org%20und%20der%20Make.org%20Stiftung.pdf\" target=\"_blank\">Ethikcharta (In einem neuen Reiter öffnen)</a> erarbeitet, welche die Neutralität, Unabhängigkeit und Transparenz von Make.org garantiert.",
       "code_penal": "Das Grundgesetz der Bundesrepublik Deutschland definiert in Artikel 3, Absatz 3: „Niemand darf wegen seines Geschlechtes, seiner Abstammung, seiner Rasse, seiner Sprache, seiner Heimat und Herkunft, seines Glaubens, seiner religiösen oder politischen Anschauungen benachteiligt oder bevorzugt werden. Niemand darf wegen seiner Behinderung benachteiligt werden.“"
     }
   },
