--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -1206,8 +1206,7 @@
     },
     "disclaimer": "Make.org is not an online platform operator falling within the scope of Law No. 2018-1202 of 22 December 2018 on the fight against information manipulation. As such, we are therefore not subject to the related obligations. However, the accuracy of the information posted on our site is important to us, and we detail in this Charter the measures we are taking in this regard.",
     "foot_notes": {
-      "link": "https://assets-global.website-files.com/59833d390a24e50001b873d8/62d80ca82cd8871a7331f896_Gender%20Equality%20Plan%20V1_EN.docx%20-%20Google%C2%A0Docs.pdf",
-      "ethical_charter": "This moderation charter has been drawn up in accordance with the ethical charter that guarantees Make.org’s neutrality, independence and transparency",
+      "ethical_charter": "This moderation charter has been drawn up in accordance with the <a href=\"https://assets-global.website-files.com/59833d390a24e50001b873d8/62d80ca82cd8871a7331f896_Gender%20Equality%20Plan%20V1_EN.docx%20-%20Google%C2%A0Docs.pdf\" target=\"_blank\">ethical charter (new tab)</a> that guarantees Make.org’s neutrality, independence and transparency",
       "code_penal": "The French Code Pénal defines discrimination as “any distinction made between physical persons based on their origin, sex, family situation, obesity, physical appearance, surname, place of residence, state of health, disability, genetic features, customs, sexual orientation or identity, age, political opinions or union activities, or on their belonging or non-belonging, real or assumed, to a given ethnic group, nation, race or religion”. (Article 225-1§1.)"
     },
     "search_function": "Use the search function to check that your idea hasn’t already been presented on the website."
