--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -104,8 +104,8 @@
       "description": "Požadovaná stránka neexistuje nebo již neexistuje."
     },
     "moderation": {
-      "title": "@@meta.moderation.title|fr:Make.org ∙ Charte de modération",
-      "description": "@@meta.moderation.description|fr:Comment passer la modération ? Comment rencontrer un franc succès sur la plateforme ? Plutôt qu’un (trop) long discours, nous prenons le parti de quelques exemples humoristiques (et félins) pour vous expliquer notre politique de modération."
+      "title": "Make.org - CHARTA MODEROVÁNÍ",
+      "description": "Každý návrh předložený na platformě je zpracován ručně týmy moderátorů Make.org s ohledem na následující kritéria Charty moderování."
     }
   },
   "common": {
@@ -1360,87 +1360,87 @@
     "confirm": "Potvrdit"
   },
   "moderation_charter": {
-    "unsuitable_label": "@@moderation_charter.unsuitable_label|fr:DÉCONSEILLÉ",
-    "adapted_label": "@@moderation_charter.adapted_label|fr:Adapté",
-    "refused_label": "@@moderation_charter.refused_label|fr:Refusé",
-    "validated_label": "@@moderation_charter.validated_label|fr:Validé",
-    "title": "@@moderation_charter.title|fr:Charte de modération",
-    "description": "@@moderation_charter.description|fr:Quelles sont les propositions refusées lors de la modération sur Make.org ? Comment formuler une proposition correctement ? Chaque proposition soumise sur la plateforme est modérée à la main par les équipes de modérateurs de Make.org, au regard des critères suivants de la charte de modération¹. La modération se fait sous 48 heures après envoi de la proposition. Vous serez informé.e par email (sous réserve d’avoir validé votre adresse email à l’inscription) de la publication ou du refus de votre proposition. Les petites fautes d'orthographe sont corrigées par les modérateurs, mais il vous revient de publier de nouveau votre proposition si celle-ci ne peut être acceptée.",
-    "refused_examples": "@@moderation_charter.refused_examples|fr:Ne sont pas autorisées sur la plateforme Make.org : ",
+    "unsuitable_label": "NEDOPORUČENO",
+    "adapted_label": "VHODNÉ",
+    "refused_label": "ODMÍTNUTO",
+    "validated_label": "SCHVÁLENO",
+    "title": "CHARTA MODEROVÁNÍ MAKE.ORG",
+    "description": "Každý návrh předložený na platformě je zpracován ručně týmy moderátorů Make.org s ohledem na následující kritéria Charty moderování. Moderace vašeho návrhuproběhne do 48 hodin po odeslání . O zveřejnění nebo zamítnutí vašeho návrhu budete informováni e-mailem (pokud jste při registraci potvrdili vaši e-mailovou adresu). Drobné pravopisné chyby jsou opraveny moderátory, ale je na vás, abyste svůj návrh znovu zveřejnili, pokud nebude přijat.",
+    "refused_examples": "Platforma Make.org nedovoluje následující:",
     "incomprehensible_solutions": {
-      "title": "@@moderation_charter.incomprehensible_solutions.title|fr:Les propositions incompréhensibles",
-      "description": "@@moderation_charter.incomprehensible_solutions.description|fr:La formulation et le sens de votre proposition doivent être compréhensibles par toutes et tous. Les erreurs importantes de syntaxe ou les non-sens seront refusés, vous serez invité·e·s à reformuler votre proposition.",
-      "refused_example_card": "@@moderation_charter.incomprehensible_solutions.refused_example_card|fr:Il faut que les citoyens se réfléchissent dans le développement par tous les pays.",
-      "validated_example_card": "@@moderation_charter.incomprehensible_solutions.validated_example_card|fr:Il faut que les citoyens réfléchissent au développement de l’éducation dans chaque pays."
+      "title": "Nesrozumitelné návrhy ",
+      "description": "Znění a význam vašeho návrhu musí být srozumitelný všem. Významné syntaktické chyby nebo nesmysly budou odmítnuty, budete vyzváni k přeformulování svého návrhu.",
+      "refused_example_card": "Je třeba, aby občané se přemýšleli v rozvoji všech zemí",
+      "validated_example_card": "Je třeba, aby občané přemýšleli o rozvoji vzdělávání v každé zemi"
     },
     "irrelevant_solutions": {
-      "title": "@@moderation_charter.irrelevant_solutions.title|fr:Les propositions hors sujet",
-      "description": "@@moderation_charter.irrelevant_solutions.description|fr:Votre proposition doit répondre à la question posée dans la consultation. Dans le cas contraire, votre proposition est considérée comme hors sujet et sera refusée.",
-      "refused_card_example": "@@moderation_charter.irrelevant_solutions.refused_card_example|fr:Il faut mettre en place la coupe du monde de football tous les 2 ans.",
-      "validated_card_example": "@@moderation_charter.irrelevant_solutions.validated_card_example|fr:Il faut favoriser l’accès aux circuits courts dans les cantines d'entreprise.",
-      "example": "@@moderation_charter.irrelevant_solutions.example|fr:Par exemple pour la question “Comment permettre à chacun de mieux manger ?”"
+      "title": "Irelevantní návrhy",
+      "description": "Váš návrh musí odpovědět na otázku položenou během konzultace, například: „Jak zajistit lepší stravu pro všechny?“. V opačném případě bude váš návrh považován za irelevantní a bude zamítnut.",
+      "refused_card_example": "Je třeba upřednostnit přístup ke kratším dodavatelským řetězcům v závodních jídelnách",
+      "validated_card_example": "Je třeba uspořádat mistrovství světa ve fotbale každé 2 roky",
+      "example": "odpověď na otázku „Jak zajistit lepší stravu pro všechny?“"
     },
     "discriminatory_solutions": {
-      "title": "@@moderation_charter.discriminatory_solutions.title|fr:Les propositions discriminantes",
-      "description": "@@moderation_charter.discriminatory_solutions.description|fr:En conformité avec la loi², votre proposition ne peut pas contenir de discours incitant à la violence ou à la haine. Elle ne peut non plus contenir de propos à caractère discriminant ou diffamatoire, notamment à l'encontre de tout groupe ethnique, social ou religieux.",
-      "refused_card_example": "@@moderation_charter.discriminatory_solutions.refused_card_example|fr:Il faut veiller à ce que les Bretons ne conservent pas leurs traditions dégradantes.",
-      "validated_card_example": "@@moderation_charter.discriminatory_solutions.validated_card_example|fr:Il faut veiller à ce que les Français puissent mieux communiquer ensemble.",
-      "refused_card_example_2": "@@moderation_charter.discriminatory_solutions.refused_card_example_2|fr:Il faut interdire les croix autour du cou qui sont un symbole d'asservissement.",
-      "validated_card_example_2": "@@moderation_charter.discriminatory_solutions.validated_card_example_2|fr:Il faut veiller à ce que la liberté de culte soit respectée dans notre pays."
+      "title": "Diskriminační návrhy",
+      "description": "Váš návrh nemůže v souladu se zákonem obsahovat projevy podněcující k násilí nebo nenávisti. Rovněž nesmí obsahovat výroky diskriminačního nebo pomlouvačného charakteru, zejména vůči jakékoliv etnické, sociální nebo náboženské skupině.",
+      "refused_card_example": "Je třeba dohlížet na to, aby homosexuálové nedosáhli uzákonění sňatků homosexuálů",
+      "validated_card_example": "Je třeba dohlížet na to, aby spolu mohli Češi lépe komunikovat.",
+      "refused_card_example_2": "Je třeba zakázat nošení křížů kolem krku, neboť jsou symbolem podrobení.",
+      "validated_card_example_2": "Je třeba dohlížet na to, aby v naší zemi byla respektována svoboda vyznání."
     },
     "partisan_solutions": {
-      "title": "@@moderation_charter.partisan_solutions.title|fr:Les propositions partisanes",
-      "description": "@@moderation_charter.partisan_solutions.description|fr:Votre proposition ne doit pas prendre parti (c'est-à-dire porter un message de valorisation ou de dévalorisation) envers un parti politique, une personnalité politique, une idéologie ou une religion (personnalité, symbole ou pratiques).",
-      "refused_card_example": "@@moderation_charter.partisan_solutions.refused_card_example|fr:Il faut prendre connaissance du programme de M. XXX, ses idées sont originales pour les prochaines élections.",
-      "validated_card_example": "@@moderation_charter.partisan_solutions.validated_card_example|fr:Il faut se renseigner sur les programmes de chaque parti politique avant les élections.",
-      "refused_card_example_2": "@@moderation_charter.partisan_solutions.refused_card_example_2|fr:Il faut relire la Bible régulièrement pour y trouver le salut.",
-      "validated_card_example_2": "@@moderation_charter.partisan_solutions.validated_card_example_2|fr:Il faut que les employeurs puissent connaître les dates de certaines fêtes religieuses : le Ramadan, Hanoucca etc."
+      "title": "Stranické návrhy",
+      "description": "Váš návrh nesmí zaujímat žádné stanovisko (tj. nést poselství valorizace nebo devalvace) vůči politické straně, politické osobnosti, ideologii nebo náboženství (osobnosti, symbolu nebo praktikám).",
+      "refused_card_example": "Je třeba seznámit se s programem pana XXX pro příští volby, protože jeho nápady jsou originální",
+      "validated_card_example": "Je třeba se seznámit s programem každé politické strany před volbami",
+      "refused_card_example_2": "Je třeba pravidelně číst Bibli, neboť pouze tam najdeme spásu",
+      "validated_card_example_2": "Je třeba, aby byli zaměstnavatelé obeznámeni s daty některých náboženských svátků: ramadán, chanuka atd"
     },
     "advertising": {
-      "title": "@@moderation_charter.advertising.title|fr:La publicité",
-      "description": "@@moderation_charter.advertising.description|fr:Vous ne pouvez pas faire de la publicité pour une marque ou une entreprise spécifique. Là encore, vous pouvez mentionner une marque ou entreprise uniquement à travers un exemple d’illustration.",
-      "refused_card_example": "@@moderation_charter.advertising.refused_card_example|fr:Il faut que toutes les entreprises utilisent les solutions proposées par IBM.",
-      "validated_card_example": "@@moderation_charter.advertising.validated_card_example|fr:Il faut arrêter de consommer certains sodas trop sucrés, comme le Coca-Cola."
+      "title": "Reklama",
+      "description": "Reklamní propagace konkrétní značky nebo společnosti je zakázána. Opět platí, že značku nebo společnost můžete zmínit pouze jako ilustrativní příklad. ",
+      "refused_card_example": "Je třeba přestat konzumovat výrobky značky Coca-Cola",
+      "validated_card_example": "Je třeba přestat konzumovat některé limonády s příliš vysokým obsahem cukru jako je Coca-Cola"
     },
     "multiple_ideas": {
-      "title": "@@moderation_charter.multiple_ideas.title|fr:Les idées multiples",
-      "description": "@@moderation_charter.multiple_ideas.description|fr:Il faut formuler une seule idée par proposition pour faciliter le vote des autres citoyens sur votre contribution. Si vous avez deux idées différentes, vous pouvez créer deux propositions.",
-      "refused_card_example": "@@moderation_charter.multiple_ideas.refused_card_example|fr:Il faut que les produits des producteurs locaux soient accessibles, et communiquer sur les innovations en agriculture.",
-      "validated_card_example": "@@moderation_charter.multiple_ideas.validated_card_example|fr:Il faut que les produits des producteurs locaux soient accessibles."
+      "title": "Mnohočetné návrhy",
+      "description": "Pro usnadnění hlasování občanů o vašem návrh, musí každý návrh obsahovat pouze jeden nápad. Pokud máte dva různé nápady, můžete předložit dva různé návrhy.",
+      "refused_card_example": "Je třeba šířit informace o inovacích v zemědělství",
+      "validated_card_example": "Je třeba, aby byly dostupné výrobky místních výrobců"
     },
     "insults": {
-      "title": "@@moderation_charter.insults.title|fr:Les injures",
-      "description": "@@moderation_charter.insults.description|fr:‍Toute proposition irrespectueuse ou injurieuse sera refusée lors de la modération.",
-      "refused_card_example": "@@moderation_charter.insults.refused_card_example|fr:Il faut que ces idiots d’automobilistes respectent davantage le code de la route.",
-      "validated_card_example": "@@moderation_charter.insults.validated_card_example|fr:Il faut que les automobilistes respectent davantage le code de la route."
+      "title": "Urážky",
+      "description": "Jakýkoli neuctivý nebo urážlivý návrh bude během moderování odmítnut.",
+      "refused_card_example": "Je třeba, aby ti idioti motoristé více respektovali pravidla silničního provozu",
+      "validated_card_example": "Je třeba, aby motoristé více respektovali pravidla silničního provozu"
     },
     "correctly_formulated_solutions": {
-      "title": "@@moderation_charter.correctly_formulated_solutions.title|fr:Comment formuler une proposition correctement sur Make.org ?"
+      "title": "JAK SPRÁVNĚ FORMULOVAT NÁVRH NA MAKE.ORG?"
     },
-    "search_function": "@@moderation_charter.search_function|fr:Utilisez la fonction recherche pour vérifier que votre idée n’est pas déjà présente sur le site.",
+    "search_function": "Pomocí funkce vyhledávání zkontrolujte, zda se váš nápad na webu již nenachází.",
     "concrete_elements": {
-      "text": "@@moderation_charter.concrete_elements.text|fr:Pensez à préciser votre idée avec des éléments concrets pour que les citoyen·ne·s comprennent précisément votre propos.",
-      "refused_card_example": "@@moderation_charter.concrete_elements.refused_card_example|fr:Il faut plus d’Europe.",
-      "validated_card_example": "@@moderation_charter.concrete_elements.validated_card_example|fr:Il faut donner plus de moyens à l’Union européenne.",
-      "refused_card_example_2": "@@moderation_charter.concrete_elements.refused_card_example_2|fr:Il faut réduire le chômage des jeunes.",
-      "validated_card_example_2": "@@moderation_charter.concrete_elements.validated_card_example_2|fr:Il faut créer un Pôle Emploi pour les jeunes."
+      "text": "Nezapomeňte svou představu specifikovat konkrétními prvky, aby občané přesně pochopili, o čem mluvíte. ",
+      "refused_card_example": "Je třeba více Evropy",
+      "validated_card_example": "Je třeba, aby bylo Evropské unii přiděleno více pravomocí",
+      "refused_card_example_2": "Je třeba snížit nezaměstnanost mladých lidí",
+      "validated_card_example_2": "Je třeba vytvořit specifický Úřad práce pro mladé lidi"
     },
     "understandable_language": {
-      "text": "@@moderation_charter.understandable_language.text|fr:Faites-vous comprendre le mieux possible en adoptant un langage accessible à toutes et tous.",
-      "refused_card_example": "@@moderation_charter.understandable_language.refused_card_example|fr:Il faut une année de propédeutique à la fac.",
-      "validated_card_example": "@@moderation_charter.understandable_language.validated_card_example|fr:Il faut une année généraliste avant de choisir sa filière à la fac.",
-      "refused_card_example_2": "@@moderation_charter.understandable_language.refused_card_example_2|fr:Il faut que l’ASC puisse dépister le cancer.",
-      "validated_card_example_2": "@@moderation_charter.understandable_language.validated_card_example_2|fr:Il faut que l’Agence pour la Santé puisse dépister le cancer."
+      "text": "Zajistěte, aby vám všichni porozuměli, používejte spisovnou češtinu.",
+      "refused_card_example": "Je třeba, aby byl na fakultách zaveden přípravný ročník",
+      "validated_card_example": "Je třeba, aby byl na fakultách před výběrem zaměření zaveden všeobecný ročník",
+      "refused_card_example_2": "Je třeba, aby AZK mohla vystopovat rakovinu",
+      "validated_card_example_2": "Je třeba, aby Agentura pro zdraví koček byla schopná vystopovat rakovinu"
     },
     "acronyms": {
-      "text": "@@moderation_charter.acronyms.text|fr:Evitez d’utiliser dans votre proposition les #, @ ou autres acronymes comme “LOL”.",
-      "refused_card_example": "@@moderation_charter.acronyms.refused_card_example|fr:Il faut baisser les impôts des entrepreneurs #compétitivité",
-      "validated_card_example": "@@moderation_charter.acronyms.validated_card_example|fr:Il faut baisser les impôts des entrepreneurs pour les rendre compétitifs !"
+      "text": "Ve svém návrhu nepoužívejte #, @ nebo jiné zkratky jako „LOL“.",
+      "refused_card_example": "Je třeba snížit daně podnikatelů #konkurenceschopnost!",
+      "validated_card_example": "Je třeba snížit daně podnikatelů a učinit je tak konkurenceschopnými!"
     },
-    "disclaimer": "@@moderation_charter.disclaimer|fr:Make.org n'est pas un opérateur de plateforme en ligne relevant du champ d'application de la loi n° 2018-1202 du 22 décembre 2018 relative à la lutte contre la manipulation de l'information. A ce titre, nous ne sommes donc pas soumis aux obligations y afférentes. La véracité des informations mises en ligne sur notre site nous tient cependant à cœur, et nous détaillons au sein de la présente Charte les mesures que nous prenons en ce sens.",
+    "disclaimer": "Make.org není provozovatelem online platformy spadající do působnosti zákona č. 2018-1202 ze dne 22. prosince 2018 o boji proti manipulaci s informacemi. Proto se na nás nevztahují související povinnosti. Pravdivost informací zveřejněných na našich stránkách je však pro nás důležitá a v této Chartě podrobně popisujeme opatření, která v tomto ohledu přijímáme.",
     "foot_notes": {
-      "ethical_charter": "@@moderation_charter.foot_notes.ethical_charter|fr:This moderation charter has been drawn up in accordance with the ethical charter that guarantees Make.org’s neutrality, independence and transparency",
-      "code_penal": "@@moderation_charter.foot_notes.code_penal|fr:The French Code Pénal defines discrimination as “any distinction made between physical persons based on their origin, sex, family situation, obesity, physical appearance, surname, place of residence, state of health, disability, genetic features, customs, sexual orientation or identity, age, political opinions or union activities, or on their belonging or non-belonging, real or assumed, to a given ethnic group, nation, race or religion”. (Article 225-1§1.)"
+      "ethical_charter": "@@moderation_charter.foot_notes.ethical_charter|fr:Tato charta moderování byla vypracována v souladu s <a href=\"https://assets.website-files.com/59833d390a24e50001b873d8/6391a67677495785ac47cab4_Charte%20Ethique%20Make.org%20et%20Make.org%20Foundation%20valide%CC%81e_CZ.docx.pdf\" target=\"_blank\">etickou chartou (nová karta)</a>, která zaručuje neutralitu, nezávislost a transparentnost Make.org.",
+      "code_penal": "Francouzský Code Pénal definuje diskriminaci jako \"jakékoli rozlišování mezi fyzickými osobami na základě jejich původu, pohlaví, rodinné situace, obezity, vzhledu, příjmení, bydliště, zdravotního stavu, zdravotního postižení, genetických znaků, zvyků, sexuální orientace nebo identity, věku, politických názorů nebo odborových aktivit nebo na základě jejich skutečné či domnělé příslušnosti či nepříslušnosti k určité etnické skupině, národu, rase nebo náboženství\". (Čl. 225-1 odst. 1.)"
     }
   }
 }
