--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -104,8 +104,8 @@
       "description": "Сторінка, яку ви шукали, не існує або її було видалено."
     },
     "moderation": {
-      "title": "@@meta.moderation.title|fr:Make.org ∙ Charte de modération",
-      "description": "@@meta.moderation.description|fr:Comment passer la modération ? Comment rencontrer un franc succès sur la plateforme ? Plutôt qu’un (trop) long discours, nous prenons le parti de quelques exemples humoristiques (et félins) pour vous expliquer notre politique de modération."
+      "title": "Make.org ∙ Хартія модерації",
+      "description": "Кожна пропозиція, подана на платформу, модерується вручну командою модераторів Make.org відповідно до наступних критеріїв Кодексу модерації."
     }
   },
   "common": {
@@ -1361,87 +1361,87 @@
     "confirm": "Підтвердити"
   },
   "moderation_charter": {
-    "unsuitable_label": "@@moderation_charter.unsuitable_label|fr:DÉCONSEILLÉ",
-    "adapted_label": "@@moderation_charter.adapted_label|fr:Adapté",
-    "refused_label": "@@moderation_charter.refused_label|fr:Refusé",
-    "validated_label": "@@moderation_charter.validated_label|fr:Validé",
-    "title": "@@moderation_charter.title|fr:Charte de modération",
-    "description": "@@moderation_charter.description|fr:Quelles sont les propositions refusées lors de la modération sur Make.org ? Comment formuler une proposition correctement ? Chaque proposition soumise sur la plateforme est modérée à la main par les équipes de modérateurs de Make.org, au regard des critères suivants de la charte de modération¹. La modération se fait sous 48 heures après envoi de la proposition. Vous serez informé.e par email (sous réserve d’avoir validé votre adresse email à l’inscription) de la publication ou du refus de votre proposition. Les petites fautes d'orthographe sont corrigées par les modérateurs, mais il vous revient de publier de nouveau votre proposition si celle-ci ne peut être acceptée.",
-    "refused_examples": "@@moderation_charter.refused_examples|fr:Ne sont pas autorisées sur la plateforme Make.org : ",
+    "unsuitable_label": "НЕ РЕКОМЕНДОВАНО",
+    "adapted_label": "АДАПТОВАНО",
+    "refused_label": "ВІДХИЛЕНО",
+    "validated_label": "ЗАТВЕРДЖЕНО",
+    "title": "КОДЕКС МОДЕРАЦІЇ MAKE.ORG",
+    "description": "Кожна пропозиція, подана на платформу, модерується вручну командою модераторів Make.org відповідно до наступних критеріїв Кодексу модерації. Модерація здійснюється протягом 48 годин після надсилання пропозиції. Ви будете поінформовані електронною поштою (за умови, що ви підтвердили свою електронну адресу під час реєстрації) про публікацію або відхилення вашої пропозиції. Незначні орфографічні помилки будуть виправлені модераторами, проте ви несете відповідальність за повторну публікацію вашої пропозиції, якщо її відхилено.",
+    "refused_examples": "На платформі Make.org заборонено наступне: ",
     "incomprehensible_solutions": {
-      "title": "@@moderation_charter.incomprehensible_solutions.title|fr:Les propositions incompréhensibles",
-      "description": "@@moderation_charter.incomprehensible_solutions.description|fr:La formulation et le sens de votre proposition doivent être compréhensibles par toutes et tous. Les erreurs importantes de syntaxe ou les non-sens seront refusés, vous serez invité·e·s à reformuler votre proposition.",
-      "refused_example_card": "@@moderation_charter.incomprehensible_solutions.refused_example_card|fr:Il faut que les citoyens se réfléchissent dans le développement par tous les pays.",
-      "validated_example_card": "@@moderation_charter.incomprehensible_solutions.validated_example_card|fr:Il faut que les citoyens réfléchissent au développement de l’éducation dans chaque pays."
+      "title": "Нечіткі пропозиції",
+      "description": "Формулювання та зміст вашої пропозиції повинні бути зрозумілими для всіх. Серйозні синтаксичні помилки або речення без сенсу будуть відхилені, і вас попросять переформулювати пропозицію.",
+      "refused_example_card": "Необхідно, щоб громадяни повинні замислитися над розвитком усім країнам.",
+      "validated_example_card": "Необхідно, щоб громадяни думали про розвиток освіти в кожній країні."
     },
     "irrelevant_solutions": {
-      "title": "@@moderation_charter.irrelevant_solutions.title|fr:Les propositions hors sujet",
-      "description": "@@moderation_charter.irrelevant_solutions.description|fr:Votre proposition doit répondre à la question posée dans la consultation. Dans le cas contraire, votre proposition est considérée comme hors sujet et sera refusée.",
-      "refused_card_example": "@@moderation_charter.irrelevant_solutions.refused_card_example|fr:Il faut mettre en place la coupe du monde de football tous les 2 ans.",
-      "validated_card_example": "@@moderation_charter.irrelevant_solutions.validated_card_example|fr:Il faut favoriser l’accès aux circuits courts dans les cantines d'entreprise.",
-      "example": "@@moderation_charter.irrelevant_solutions.example|fr:Par exemple pour la question “Comment permettre à chacun de mieux manger ?”"
+      "title": "Пропозиції, що не відповідають тематиці",
+      "description": "Ваша пропозиція повинна відповідати, наприклад, на запитання, поставлене під час публічної консультації: «Як нам дати можливість усім харчуватися краще?». Якщо пропозиція не відповідає запитанню, вона буде вважатися неналежною до теми, і буде відхилена.",
+      "refused_card_example": "Необхідно зробити так, щоб чемпіонат світу з футболу проводився раз на два роки.",
+      "validated_card_example": "Необхідно сприяти доступу до короткого циклу постачання в їдальнях підприємств.",
+      "example": "на запитання «Як нам дати можливість усім харчуватися краще?”"
     },
     "discriminatory_solutions": {
-      "title": "@@moderation_charter.discriminatory_solutions.title|fr:Les propositions discriminantes",
-      "description": "@@moderation_charter.discriminatory_solutions.description|fr:En conformité avec la loi², votre proposition ne peut pas contenir de discours incitant à la violence ou à la haine. Elle ne peut non plus contenir de propos à caractère discriminant ou diffamatoire, notamment à l'encontre de tout groupe ethnique, social ou religieux.",
-      "refused_card_example": "@@moderation_charter.discriminatory_solutions.refused_card_example|fr:Il faut veiller à ce que les Bretons ne conservent pas leurs traditions dégradantes.",
-      "validated_card_example": "@@moderation_charter.discriminatory_solutions.validated_card_example|fr:Il faut veiller à ce que les Français puissent mieux communiquer ensemble.",
-      "refused_card_example_2": "@@moderation_charter.discriminatory_solutions.refused_card_example_2|fr:Il faut interdire les croix autour du cou qui sont un symbole d'asservissement.",
-      "validated_card_example_2": "@@moderation_charter.discriminatory_solutions.validated_card_example_2|fr:Il faut veiller à ce que la liberté de culte soit respectée dans notre pays."
+      "title": "Дискримінаційні пропозиції  ",
+      "description": "Згідно із законодавством ваша пропозиція не може містити висловлювань, що розпалюють насильство або ненависть. Вона також не може містити дискримінаційних або наклепницьких висловлювань, особливо щодо будь-якої етнічної, соціальної чи релігійної групи.",
+      "refused_card_example": "Необхідно стигматізувати українців, що розмовляють російською мовою.",
+      "validated_card_example": "Необхідно зробити так, щоб українці могли краще спілкуватися між собою.",
+      "refused_card_example_2": "Необхідно заборонити хрестики на шиї, які є символом поневолення.",
+      "validated_card_example_2": "Необхідно забезпечити дотримання свободи віросповідання в нашій країні."
     },
     "partisan_solutions": {
-      "title": "@@moderation_charter.partisan_solutions.title|fr:Les propositions partisanes",
-      "description": "@@moderation_charter.partisan_solutions.description|fr:Votre proposition ne doit pas prendre parti (c'est-à-dire porter un message de valorisation ou de dévalorisation) envers un parti politique, une personnalité politique, une idéologie ou une religion (personnalité, symbole ou pratiques).",
-      "refused_card_example": "@@moderation_charter.partisan_solutions.refused_card_example|fr:Il faut prendre connaissance du programme de M. XXX, ses idées sont originales pour les prochaines élections.",
-      "validated_card_example": "@@moderation_charter.partisan_solutions.validated_card_example|fr:Il faut se renseigner sur les programmes de chaque parti politique avant les élections.",
-      "refused_card_example_2": "@@moderation_charter.partisan_solutions.refused_card_example_2|fr:Il faut relire la Bible régulièrement pour y trouver le salut.",
-      "validated_card_example_2": "@@moderation_charter.partisan_solutions.validated_card_example_2|fr:Il faut que les employeurs puissent connaître les dates de certaines fêtes religieuses : le Ramadan, Hanoucca etc."
+      "title": "Партійні пропозиції",
+      "description": "Ваша пропозиція не повинна ставати на бік (тобто нести повідомлення про схвалення або знецінення) політичної партії, політичного діяча, ідеології або релігії (постаті, символу або практик).",
+      "refused_card_example": "Необхідно ознайомитися з програмою пана ХХХ перед наступними виборами, у нього оригінальні ідеї",
+      "validated_card_example": "Необхідно перед виборами ознайомлюватися з програмою кожної політичної партії.",
+      "refused_card_example_2": "Необхідно регулярно перечитувати Біблію, щоб знайти спасіння.",
+      "validated_card_example_2": "Необхідно, щоб роботодавці знали дати певних релігійних свят: Рамадан, Ханука тощо."
     },
     "advertising": {
-      "title": "@@moderation_charter.advertising.title|fr:La publicité",
-      "description": "@@moderation_charter.advertising.description|fr:Vous ne pouvez pas faire de la publicité pour une marque ou une entreprise spécifique. Là encore, vous pouvez mentionner une marque ou entreprise uniquement à travers un exemple d’illustration.",
-      "refused_card_example": "@@moderation_charter.advertising.refused_card_example|fr:Il faut que toutes les entreprises utilisent les solutions proposées par IBM.",
-      "validated_card_example": "@@moderation_charter.advertising.validated_card_example|fr:Il faut arrêter de consommer certains sodas trop sucrés, comme le Coca-Cola."
+      "title": "Реклама",
+      "description": "Не можна рекламувати конкретний бренд або компанію. Згадування певних брендів чи компаній  може  слугувати лише прикладом.",
+      "refused_card_example": "Необхідно припинити вживати продукцію бренду Coca-Cola.",
+      "validated_card_example": "Необхідно відмовитися від споживання певних надмірно підсолоджених безалкогольних напоїв, як-от Coca-Cola."
     },
     "multiple_ideas": {
-      "title": "@@moderation_charter.multiple_ideas.title|fr:Les idées multiples",
-      "description": "@@moderation_charter.multiple_ideas.description|fr:Il faut formuler une seule idée par proposition pour faciliter le vote des autres citoyens sur votre contribution. Si vous avez deux idées différentes, vous pouvez créer deux propositions.",
-      "refused_card_example": "@@moderation_charter.multiple_ideas.refused_card_example|fr:Il faut que les produits des producteurs locaux soient accessibles, et communiquer sur les innovations en agriculture.",
-      "validated_card_example": "@@moderation_charter.multiple_ideas.validated_card_example|fr:Il faut que les produits des producteurs locaux soient accessibles."
+      "title": "Множинність ідей",
+      "description": "У кожній пропозиції слід формулювати лише одну ідею, щоб полегшити іншим громадянам голосування за вашу пропозицію. Якщо у вас є дві різні ідеї, ви можете створити дві пропозиції.",
+      "refused_card_example": "Необхідно зробити доступною продукцію місцевих виробників, а також розповідати про інновації в сільському господарстві",
+      "validated_card_example": "Необхідно зробити доступною продукцію місцевих виробників"
     },
     "insults": {
-      "title": "@@moderation_charter.insults.title|fr:Les injures",
-      "description": "@@moderation_charter.insults.description|fr:‍Toute proposition irrespectueuse ou injurieuse sera refusée lors de la modération.",
-      "refused_card_example": "@@moderation_charter.insults.refused_card_example|fr:Il faut que ces idiots d’automobilistes respectent davantage le code de la route.",
-      "validated_card_example": "@@moderation_charter.insults.validated_card_example|fr:Il faut que les automobilistes respectent davantage le code de la route."
+      "title": "Образи",
+      "description": "Будь-яку неповажну або образливу пропозицію буде відхилено під час модерації.",
+      "refused_card_example": "Необхідно, щоб ці дурні автомобілісти краще дотримувалися правил дорожнього руху.",
+      "validated_card_example": "Необхідно, щоб автомобілісти краще дотримувалися правил дорожнього руху."
     },
     "correctly_formulated_solutions": {
-      "title": "@@moderation_charter.correctly_formulated_solutions.title|fr:Comment formuler une proposition correctement sur Make.org ?"
+      "title": "ЯК ПРАВИЛЬНО СФОРМУЛЮВАТИ ПРОПОЗИЦІЮ НА MAKE.ORG?"
     },
-    "search_function": "@@moderation_charter.search_function|fr:Utilisez la fonction recherche pour vérifier que votre idée n’est pas déjà présente sur le site.",
+    "search_function": "Скористайтеся функцією пошуку, щоб перевірити, чи немає такої ж ідеї на сайті.",
     "concrete_elements": {
-      "text": "@@moderation_charter.concrete_elements.text|fr:Pensez à préciser votre idée avec des éléments concrets pour que les citoyen·ne·s comprennent précisément votre propos.",
-      "refused_card_example": "@@moderation_charter.concrete_elements.refused_card_example|fr:Il faut plus d’Europe.",
-      "validated_card_example": "@@moderation_charter.concrete_elements.validated_card_example|fr:Il faut donner plus de moyens à l’Union européenne.",
-      "refused_card_example_2": "@@moderation_charter.concrete_elements.refused_card_example_2|fr:Il faut réduire le chômage des jeunes.",
-      "validated_card_example_2": "@@moderation_charter.concrete_elements.validated_card_example_2|fr:Il faut créer un Pôle Emploi pour les jeunes."
+      "text": "Подумайте над тим, як доповнити свою ідею конкретними елементами, щоб громадяни добре зрозуміли вашу думку. ",
+      "refused_card_example": "Необхідно, щоб ЄС мав більше.",
+      "validated_card_example": "Необхідно надати Європейському союзу більше засобів.",
+      "refused_card_example_2": "Необхідно скоротити безробіття серед молоді.",
+      "validated_card_example_2": "Необхідно створити центр зайнятості для молоді."
     },
     "understandable_language": {
-      "text": "@@moderation_charter.understandable_language.text|fr:Faites-vous comprendre le mieux possible en adoptant un langage accessible à toutes et tous.",
-      "refused_card_example": "@@moderation_charter.understandable_language.refused_card_example|fr:Il faut une année de propédeutique à la fac.",
-      "validated_card_example": "@@moderation_charter.understandable_language.validated_card_example|fr:Il faut une année généraliste avant de choisir sa filière à la fac.",
-      "refused_card_example_2": "@@moderation_charter.understandable_language.refused_card_example_2|fr:Il faut que l’ASC puisse dépister le cancer.",
-      "validated_card_example_2": "@@moderation_charter.understandable_language.validated_card_example_2|fr:Il faut que l’Agence pour la Santé puisse dépister le cancer."
+      "text": "Зробіть так, щоб вас зрозуміли якнайкраще, використовуючи доступну для всіх мову.",
+      "refused_card_example": "Необхідно, щоб в університеті був пропедевтичний річний курс.",
+      "validated_card_example": "Необхідно пройти загальну річну підготовку, перш ніж обирати спеціальність в університеті",
+      "refused_card_example_2": "Необхідно, щоб АЗК мала можливість проводити скринінг на онкологічні захворювання",
+      "validated_card_example_2": "Необхідно, щоб Агенція здоров’я кішок могла проводити скринінг на онкологічні захворювання"
     },
     "acronyms": {
-      "text": "@@moderation_charter.acronyms.text|fr:Evitez d’utiliser dans votre proposition les #, @ ou autres acronymes comme “LOL”.",
-      "refused_card_example": "@@moderation_charter.acronyms.refused_card_example|fr:Il faut baisser les impôts des entrepreneurs #compétitivité",
-      "validated_card_example": "@@moderation_charter.acronyms.validated_card_example|fr:Il faut baisser les impôts des entrepreneurs pour les rendre compétitifs !"
+      "text": "Уникайте використання символів #, @ або інших скорочень на кшталт LOL у пропозиції.",
+      "refused_card_example": "Необхідно зменшити податки для підприємців #конкурентоспроможність!",
+      "validated_card_example": "Необхідно зменшити податки для підприємців, щоб вони були конкурентоспроможними!"
     },
-    "disclaimer": "@@moderation_charter.disclaimer|fr:Make.org n'est pas un opérateur de plateforme en ligne relevant du champ d'application de la loi n° 2018-1202 du 22 décembre 2018 relative à la lutte contre la manipulation de l'information. A ce titre, nous ne sommes donc pas soumis aux obligations y afférentes. La véracité des informations mises en ligne sur notre site nous tient cependant à cœur, et nous détaillons au sein de la présente Charte les mesures que nous prenons en ce sens.",
+    "disclaimer": "Make.org není provozovatelem online platformy spadající do působnosti zákona č. 2018-1202 ze dne 22. prosince 2018 o boji proti manipulaci s informacemi. Proto se na nás nevztahují související povinnosti. Pravdivost informací zveřejněných na našich stránkách je však pro nás důležitá a v této Chartě podrobně popisujeme opatření, která v tomto ohledu přijímáme.",
     "foot_notes": {
-      "ethical_charter": "@@moderation_charter.foot_notes.ethical_charter|fr:This moderation charter has been drawn up in accordance with the ethical charter that guarantees Make.org’s neutrality, independence and transparency",
-      "code_penal": "@@moderation_charter.foot_notes.code_penal|fr:The French Code Pénal defines discrimination as “any distinction made between physical persons based on their origin, sex, family situation, obesity, physical appearance, surname, place of residence, state of health, disability, genetic features, customs, sexual orientation or identity, age, political opinions or union activities, or on their belonging or non-belonging, real or assumed, to a given ethnic group, nation, race or religion”. (Article 225-1§1.)"
+      "ethical_charter": " Цей <a href=\"https://assets.website-files.com/59833d390a24e50001b873d8/5fd245978b3dbedcbcc121a2_VF%20Charte%20Ethique%20Make.org%20et%20Make.org%20Foundation%20valid%C3%A9e.pdf\" target=\"_blank\">Кодекс модерації (нова вкладка)</a> розроблений відповідно до Кодексу етики, який гарантує нейтральність, незалежність та прозорість Make.org:",
+      "code_penal": "Кримінальний кодекс України визначає дискримінацію як «умисні дії, спрямовані на розпалювання національної, регіональної, расової чи релігійної ворожнечі та ненависті, на приниження національної честі та гідності, або образа почуттів громадян у зв’язку з їхніми релігійними переконаннями, а також пряме чи непряме обмеження прав або встановлення прямих чи непрямих привілеїв громадян за ознаками раси, кольору шкіри, політичних, релігійних та інших переконань, статі, інвалідності, етнічного та соціального походження, майнового стану, місця проживання, за мовними або іншими ознаками». (Стаття 161-§1)."
     }
   }
 }
