feat(front): 7 new languages
closes: MP-3270

--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -1351,7 +1351,14 @@
     "en": "English",
     "de": "Deutsch",
     "uk": "Українська",
-    "cs": "Česky"
+    "cs": "Česky",
+    "es": "Español",
+    "pl": "Polski",
+    "it": "Italiano",
+    "nl": "Nederlands",
+    "fi": "Suomi",
+    "ro": "Română",
+    "bg": "Български"
   },
   "language_switch": {
     "country_title": "Tvá země",
