--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1352,7 +1352,14 @@
     "en": "English",
     "de": "Deutsch",
     "uk": "Українська",
-    "cs": "Česky"
+    "cs": "Česky",
+    "es": "Español",
+    "pl": "Polski",
+    "it": "Italiano",
+    "nl": "Nederlands",
+    "fi": "Suomi",
+    "ro": "Română",
+    "bg": "Български"
   },
   "language_switch": {
     "country_title": "Ваша країна",
