--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1366,7 +1366,7 @@
     "refused_label": "ВІДХИЛЕНО",
     "validated_label": "ЗАТВЕРДЖЕНО",
     "title": "КОДЕКС МОДЕРАЦІЇ MAKE.ORG",
-    "description": "Кожна пропозиція, подана на платформу, модерується вручну командою модераторів Make.org відповідно до наступних критеріїв Кодексу модерації. Модерація здійснюється протягом 48 годин після надсилання пропозиції. Ви будете поінформовані електронною поштою (за умови, що ви підтвердили свою електронну адресу під час реєстрації) про публікацію або відхилення вашої пропозиції. Незначні орфографічні помилки будуть виправлені модераторами, проте ви несете відповідальність за повторну публікацію вашої пропозиції, якщо її відхилено.",
+    "description": "Кожна пропозиція, подана на платформу, модерується вручну командою модераторів Make.org відповідно до наступних критеріїв Кодексу модерації¹. Модерація здійснюється протягом 48 годин після надсилання пропозиції. Ви будете поінформовані електронною поштою (за умови, що ви підтвердили свою електронну адресу під час реєстрації) про публікацію або відхилення вашої пропозиції. Незначні орфографічні помилки будуть виправлені модераторами, проте ви несете відповідальність за повторну публікацію вашої пропозиції, якщо її відхилено.",
     "refused_examples": "На платформі Make.org заборонено наступне: ",
     "incomprehensible_solutions": {
       "title": "Нечіткі пропозиції",
@@ -1383,7 +1383,7 @@
     },
     "discriminatory_solutions": {
       "title": "Дискримінаційні пропозиції  ",
-      "description": "Згідно із законодавством ваша пропозиція не може містити висловлювань, що розпалюють насильство або ненависть. Вона також не може містити дискримінаційних або наклепницьких висловлювань, особливо щодо будь-якої етнічної, соціальної чи релігійної групи.",
+      "description": "Згідно із законодавством ваша пропозиція не може містити висловлювань², що розпалюють насильство або ненависть. Вона також не може містити дискримінаційних або наклепницьких висловлювань, особливо щодо будь-якої етнічної, соціальної чи релігійної групи.",
       "refused_card_example": "Необхідно стигматізувати українців, що розмовляють російською мовою.",
       "validated_card_example": "Необхідно зробити так, щоб українці могли краще спілкуватися між собою.",
       "refused_card_example_2": "Необхідно заборонити хрестики на шиї, які є символом поневолення.",
